product card margin bottom change

--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ body {
         margin-left: 27vw;
         margin-right: 27vw;
         margin-top: 4vw;
-
+        margin-bottom: 10vw
     }
 
     .p-card {
