contact margin bottom increase

--- a/style.css
+++ b/style.css
@@ -170,6 +170,7 @@ body {
         text-align: center;
         justify-content: center;
         padding-top: 10vh;
+        margin-bottom: 10vw;
     }
 
     #contactlistemails {
